--- a/src/components/Layout/Header/Header.module.css
+++ b/src/components/Layout/Header/Header.module.css
@@ -15,7 +15,7 @@
 	list-style: none;
 }
 .header a {
-	color: #ddd;
+	color: #fff;
 	text-decoration: none;
 	font-size: 1.5rem;
 	margin: 0 10px;
@@ -23,5 +23,5 @@
 
 .header a:active,
 .header a.active {
-	opacity: 0.8;
+	opacity: 0.6;
 }
