--- a/src/components/module/Profile/Profile.module.css
+++ b/src/components/module/Profile/Profile.module.css
@@ -1,5 +1,3 @@
-.profile {
-}
 .profile p span {
 	display: block;
 }
@@ -14,6 +12,7 @@
 	display: flex;
 	align-items: center;
 	border-bottom: 2px solid #a8a8a8;
+	padding: 8px 0 0 0;
 }
 .contact svg {
 	font-size: 1.5rem;
@@ -22,6 +21,7 @@
 	color: #fff;
 	border-radius: 25px;
 	margin: 0 10px 0 0;
+	flex-shrink: 0;
 }
 .contact a {
 	text-decoration: none;
